labs/sections/programming-with-python/day-077-quality-gates-for-a-python-project/expected-output/gate-failures.txt
# Proving the gate has teeth — five defects, five red gates.
#
# Captured on macOS 26.5.1 (Apple Silicon), Python 3.14.0, bash 3.2.57,
# 2026-07-19, with ruff 0.15.22, mypy 2.3.0, pytest 9.1.1, coverage 7.15.2.
#
# Each run below starts from a fresh temporary copy of examples/, applies ONE
# defect, and runs `bash check.sh` in the default report-everything mode. Read
# the last two lines of each block: exactly one stage goes red every time, and
# the gate's exit code is 1. tests/run_tests.sh reproduces all five
# automatically.

############ DEFECT: format ############
=== format ===
Would reformat: pricekit/receipt.py
1 file would be reformatted, 4 files already formatted
FAIL: format

=== lint ===
All checks passed!
PASS: lint

=== types ===
Success: no issues found in 3 source files
PASS: types

=== tests ===
..........................................                               [100%]
42 passed in 0.02s
PASS: tests

=== coverage ===
Name                   Stmts   Miss Branch BrPart  Cover   Missing
------------------------------------------------------------------
pricekit/__init__.py       3      0      0      0   100%
pricekit/money.py         28      0     12      0   100%
pricekit/receipt.py       35      0     14      0   100%
------------------------------------------------------------------
TOTAL                     66      0     26      0   100%
PASS: coverage

=== gate FAILED ===
failing stages: format
exit: 1

############ DEFECT: lint ############
=== format ===
5 files already formatted
PASS: format

=== lint ===
I001 [*] Import block is un-sorted or un-formatted
  --> pricekit/money.py:8:1
   |
 6 |   """
 7 |
 8 | / from __future__ import annotations
 9 | |
10 | | from dataclasses import dataclass
11 | | import os
   | |_________^
   |
help: Organize imports

F401 [*] `os` imported but unused
  --> pricekit/money.py:11:8
   |
10 | from dataclasses import dataclass
11 | import os
   |        ^^
   |
help: Remove unused import: `os`

Found 2 errors.
[*] 2 fixable with the `--fix` option.
FAIL: lint

=== types ===
Success: no issues found in 3 source files
PASS: types

=== tests ===
..........................................                               [100%]
42 passed in 0.03s
PASS: tests

=== coverage ===
Name                   Stmts   Miss Branch BrPart  Cover   Missing
------------------------------------------------------------------
pricekit/__init__.py       3      0      0      0   100%
pricekit/money.py         29      0     12      0   100%
pricekit/receipt.py       35      0     14      0   100%
------------------------------------------------------------------
TOTAL                     67      0     26      0   100%
PASS: coverage

=== gate FAILED ===
failing stages: lint
exit: 1

############ DEFECT: types ############
=== format ===
5 files already formatted
PASS: format

=== lint ===
All checks passed!
PASS: lint

=== types ===
pricekit/money.py:53: error: Return type "int" of "__str__" incompatible with return type "str" in supertype "builtins.object"  [override]
pricekit/money.py:54: error: Incompatible return value type (got "str", expected "int")  [return-value]
Found 2 errors in 1 file (checked 3 source files)
FAIL: types

=== tests ===
..........................................                               [100%]
42 passed in 0.03s
PASS: tests

=== coverage ===
Name                   Stmts   Miss Branch BrPart  Cover   Missing
------------------------------------------------------------------
pricekit/__init__.py       3      0      0      0   100%
pricekit/money.py         28      0     12      0   100%
pricekit/receipt.py       35      0     14      0   100%
------------------------------------------------------------------
TOTAL                     66      0     26      0   100%
PASS: coverage

=== gate FAILED ===
failing stages: types
exit: 1

############ DEFECT: tests ############
=== format ===
5 files already formatted
PASS: format

=== lint ===
All checks passed!
PASS: lint

=== types ===
Success: no issues found in 3 source files
PASS: types

=== tests ===
F.......................F...............FF                               [100%]
=================================== FAILURES ===================================
______________________ test_money_adds_within_a_currency _______________________

    def test_money_adds_within_a_currency() -> None:
>       assert Money(2900) + Money(4900) == Money(7800)
E       AssertionError: assert Money(cents=7...urrency='EUR') == Money(cents=7...urrency='EUR')
E         
E         Omitting 1 identical items, use -vv to show
E         Differing attributes:
E         ['cents']
E         
E         Drill down into differing attribute cents:
E           cents: 7801 != 7800

tests/test_money.py:9: AssertionError
________________________ test_subtotal_adds_every_line _________________________

basket = [('coffee', Money(cents=450, currency='EUR'), 2), ('bread', Money(cents=320, currency='EUR'), 1), ('olive oil', Money(cents=1195, currency='EUR'), 3)]

    def test_subtotal_adds_every_line(basket: list[Line]) -> None:
        # 900 + 320 + 3585 = 4805
>       assert subtotal(basket) == Money(4805)
E       AssertionError: assert Money(cents=4...urrency='EUR') == Money(cents=4...urrency='EUR')
E         
E         Omitting 1 identical items, use -vv to show
E         Differing attributes:
E         ['cents']
E         
E         Drill down into differing attribute cents:
E           cents: 4807 != 4805

tests/test_receipt.py:37: AssertionError
______________ test_format_receipt_without_tax_omits_the_tax_line ______________

basket = [('coffee', Money(cents=450, currency='EUR'), 2), ('bread', Money(cents=320, currency='EUR'), 1), ('olive oil', Money(cents=1195, currency='EUR'), 3)]

    def test_format_receipt_without_tax_omits_the_tax_line(basket: list[Line]) -> None:
        text = format_receipt(basket)
        assert "tax" not in text
>       assert text.splitlines()[-1] == "total        48.05 EUR"
E       AssertionError: assert 'total        48.07 EUR' == 'total        48.05 EUR'
E         
E         - total        48.05 EUR
E         ?                  ^
E         + total        48.07 EUR
E         ?                  ^

tests/test_receipt.py:86: AssertionError
________________ test_format_receipt_with_tax_shows_every_line _________________

basket = [('coffee', Money(cents=450, currency='EUR'), 2), ('bread', Money(cents=320, currency='EUR'), 1), ('olive oil', Money(cents=1195, currency='EUR'), 3)]

    def test_format_receipt_with_tax_shows_every_line(basket: list[Line]) -> None:
        text = format_receipt(basket, tax_percent=21)
        lines = text.splitlines()
        assert len(lines) == 6
        assert lines[0] == "coffee         2 x 4.50 EUR = 9.00 EUR"
>       assert lines[3] == "subtotal     48.05 EUR"
E       AssertionError: assert 'subtotal     48.07 EUR' == 'subtotal     48.05 EUR'
E         
E         - subtotal     48.05 EUR
E         ?                  ^
E         + subtotal     48.07 EUR
E         ?                  ^

tests/test_receipt.py:94: AssertionError
=========================== short test summary info ============================
FAILED tests/test_money.py::test_money_adds_within_a_currency - AssertionErro...
FAILED tests/test_receipt.py::test_subtotal_adds_every_line - AssertionError:...
FAILED tests/test_receipt.py::test_format_receipt_without_tax_omits_the_tax_line
FAILED tests/test_receipt.py::test_format_receipt_with_tax_shows_every_line
4 failed, 38 passed in 0.03s
FAIL: tests

=== coverage ===
Name                   Stmts   Miss Branch BrPart  Cover   Missing
------------------------------------------------------------------
pricekit/__init__.py       3      0      0      0   100%
pricekit/money.py         28      0     12      0   100%
pricekit/receipt.py       35      0     14      0   100%
------------------------------------------------------------------
TOTAL                     66      0     26      0   100%
PASS: coverage

=== gate FAILED ===
failing stages: tests
exit: 1

############ DEFECT: coverage ############
=== format ===
5 files already formatted
PASS: format

=== lint ===
All checks passed!
PASS: lint

=== types ===
Success: no issues found in 3 source files
PASS: types

=== tests ===
..........................................                               [100%]
42 passed in 0.03s
PASS: tests

=== coverage ===
Name                   Stmts   Miss Branch BrPart  Cover   Missing
------------------------------------------------------------------
pricekit/__init__.py       3      0      0      0   100%
pricekit/money.py         28      0     12      0   100%
pricekit/receipt.py       45      9     18      0    79%   71-79
------------------------------------------------------------------
TOTAL                     76      9     30      0    88%
Coverage failure: total of 88 is less than fail-under=95
FAIL: coverage

=== gate FAILED ===
failing stages: coverage
exit: 1

